# yggdrasil

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.md  test.c  yggdrasil.h
example/: CMakeLists.txt  main.c  shader.frag  shader.vert
examples/hello_triangle/: CMakeLists.txt  hello_triangle.c  shader.slang  shader.vert  vecmat.h
submodules/: CMakeLists.txt
